--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -64,6 +64,7 @@ This section includes links to the configuration files used by /non Hyprland/ pa
 
 *Essential* environment variables
 #+begin_src conf :tangle hyprland.conf
+  env = WLR_NO_HARDWARE_CURSORS, 1
   $mainMod = SUPER
   $terminal = kitty
   $menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
@@ -516,7 +517,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-  #screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+  #############screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
